[gd_scene load_steps=4 format=2]

[ext_resource path="res://Base.gd" type="Script" id=1]
[ext_resource path="res://UI/StartMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/PauseMenu.tscn" type="PackedScene" id=3]

[node name="Base" type="Node2D"]
script = ExtResource( 1 )

[node name="StartMenu" parent="." instance=ExtResource( 2 )]

[node name="PauseMenu" parent="." instance=ExtResource( 3 )]

[node name="StepTimer" type="Timer" parent="."]
one_shot = true

[connection signal="start" from="StartMenu" to="." method="_on_StartMenu_start"]
[connection signal="continued" from="PauseMenu" to="." method="_on_PauseMenu_continued"]
[connection signal="restarted" from="PauseMenu" to="." method="_on_PauseMenu_restarted"]
